@@ -53,6 +53,8 @@ Inside *src/main/python* each Python script corresponds to a different GC test.
   
   Both Maxine's GCs benchmark tests can be run with the following cmd:
   
-   *mx vm -Xms heapSizeInit -Xmx heapSizeMax -XX:+TraceGCTime -XX:+PrintCompilationTime -Dspecjvm.home.dir=../resources/SPECSPEC      -jar  ../SPEC/SPECjvm2008.jar -it execTime -wt warmUpTime -coe -crf false -ikv benchmarkName*
-
-  
+   *mx vm -Xms heapSizeInit -Xmx heapSizeMax -XX:+TraceGCTime -XX:+PrintCompilationTime -jar [SPEC_PARAMS]*
+   
+  HotSpot's G1 can be used with the following cmd:
+   command = "java heapSizeInit -Xmx heapSizeMax -XX:+UseG1GC -XX:+PrintGCApplicationConcurrentTime -verbose:gc -jar [SPEC_PARAMS]
+   
